--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <body>
     <main id="app" class="classroom-container">
       <h1 class="classroom-container__title">👩🏻‍💻 나만의 유튜브 강의실 👨🏻‍💻</h1>
-      <nav class="nav">
+      <nav id="nav" class="nav">
+        <button id="will-see-video-button" class="button nav__button" type="submit">👁️ 볼 영상</button>
+        <button id="already-watched-video-button" class="button nav__button" type="submit">✅ 본 영상</button>
         <button id="search-modal-button" class="button nav__button" type="submit">🔍 검색</button>
       </nav>
+      <ul id="classroom-contents-container"></ul>
     </main>
     <div id="modal-container" class="modal-container hide">
       <div class="dimmer"></div>
@@ -20,6 +23,7 @@
         <section class="search-input">
           <h3 hidden>검색어 입력</h3>
           <input id="search-input-keyword" type="text" placeholder="검색" class="search-input__keyword" />
+          <button id="search-input-clear-button" type="submit"></button>
           <button id="search-button" class="search-input__search-button button" type="submit">검색</button>
         </section>
         <section id="search-result">
