--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <main id="app" class="classroom-container">
       <h1 class="classroom-container__title">👩🏻‍💻 나만의 유튜브 강의실 👨🏻‍💻</h1>
+      <div id="snackbar-container"></div>
       <nav id="nav" class="nav">
         <button id="will-see-video-button" class="button nav__button" type="submit">👁️ 볼 영상</button>
         <button id="already-watched-video-button" class="button nav__button" type="submit">✅ 본 영상</button>
